# jet-lag-the-game-demo

./: .gitignore  CLAUDE.md  README.md  build_data.py  execution_tasks.md  implementation_plan.md  main.py  pyproject.toml  seeker_questions.md  train_stations.csv
.claude/agent-memory/execution-task-runner/: MEMORY.md  project_state.md
.claude/agents/: execution-task-runner.md
data/: config.uk.json  countries.json  questions.uk.json  regions.uk.json  stations.uk.json
src/: answer_engine.py  data_loader.py  game_state.py  guess_engine.py  hint_engine.py
tests/: test_answer_engine.py  test_game_state.py  test_guess_engine.py
